# qaguru_autotest_lesson_17

./: .gitignore  README.md  pyproject.toml
src/qaguru_autotest_lesson_17/schemas/: response_schema_get.json
src/qaguru_autotest_lesson_17/utils/: paths.py  request_params.py
tests/: conftest.py  test_get.py  test_request_type_delete.py  test_request_type_get.py  test_request_type_post.py  test_request_type_put.py
